--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello
+﻿<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    안녕하세요. VUJADE입니다.
+  </body>
+</html>
