html 문서 특징 파악 학습

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    안녕하세요. VUJADE입니다.
+    안녕하세요. <strong> VUJADE </strong> 입니다. <br/>
+    매일 재미있게 걸읍시다.    안녕하세요
+    데쟈부
+    
   </body>
 </html>
